Capistrano deploy and sublime projects

--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,7 @@ npm-debug.log*
 
 # Ignore Visual Studio Code files
 /.vscode
+openproject.sublime-workspace
 
 # Ignore Vim backup files
 *~
@@ -99,6 +100,7 @@ npm-debug.log*
 *.icloud
 .rspec
 .byebug_history
+/config/master.key
 
 # coverage in plugins
 /lib/plugins/*/coverage
