--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "@types/chart.js": "^2.9.20",
     "@types/codemirror": "5.60.5",
     "@types/dragula": "^3.7.0",
+    "@types/file-saver": "^2.0.5",
     "@types/hammerjs": "^2.0.36",
     "@types/jasmine": "~3.6.0",
     "@types/jquery": "^3.3.33",
@@ -132,7 +133,9 @@
     "dom-autoscroller": "^2.2.8",
     "dom-plane": "^1.0.2",
     "dragula": "^3.5.2",
+    "exceljs": "^4.3.0",
     "expose-loader": "^0.7.5",
+    "file-saver": "^2.0.5",
     "flatpickr": "^4.6.13",
     "fuse.js": "^3.4.5",
     "glob": "^7.1.4",
