--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,3 +28,24 @@ deploy_staging:
   environment:
     name: staging
     url: https://plm-staging.thape.com.cn
+
+deploy_production:
+  cache:
+    - key:
+        files:
+          - Gemfile.lock
+      paths:
+        - vendor/ruby
+  stage: deploy
+  script:
+    - bundle install -j $(nproc)
+    - mkdir ~/.ssh
+    - mv "$SSH_ID_RSA" ~/.ssh/id_rsa
+    - mv "$SSH_CONFIG_FILE" ~/.ssh/config
+    - bundle exec cap production deploy
+  environment:
+    name: production
+    url: https://plm.thape.com.cn
+  when: manual
+  rules:
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
